--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,7 @@
 language: objective-c
 osx_image: xcode7.2
-#xcode_project: UDSync.xcodeproj
 xcode_workspace: UDSync.xcworkspace
 xcode_scheme: UDSync
 xcode_sdk: iphonesimulator9.2
-
-#before_install:
-#  - brew update
-#  - brew install cocoapods
-#  - pod install
+before_script:
+  - pod spec lint UDSync.podspec --verbose
