--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,7 @@ osx_image: xcode7.2
 xcode_workspace: UDSync.xcworkspace
 xcode_scheme: UDSync
 xcode_sdk: iphonesimulator9.2
-before_script:
-  - pod spec lint UDSync.podspec --verbose
+
+# add once cocoapods go v1
+#before_script:
+#  - pod spec lint UDSync.podspec --verbose
