--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
-language: objective-c
-osx_image: xcode7.2
+language: swift
+osx_image: xcode8.0
 xcode_workspace: UDSync.xcworkspace
 xcode_scheme: UDSync
-xcode_sdk: iphonesimulator9.2
+xcode_sdk: iphonesimulator10.2
 
 # add once cocoapods go v1
 #before_script:
