Adds pods repo update to travisci

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,6 @@ xcode_scheme: UDSync
 xcode_sdk: iphonesimulator10.2
 
 # add once cocoapods go v1
-#before_script:
+before_install:
+  - pod repo update
 #  - pod spec lint UDSync.podspec --verbose
